--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 body {
+	position: relative;
 	margin: 0;
 	padding: 0;
 	width: 100%;
@@ -66,7 +67,10 @@ select {
 }
 
 /* Header */
-
+.header{
+	position: relative;
+	z-index: 16;
+}
 .header-top {
 	padding: 16px 0;
 	background-color: #f5f7f9;
@@ -74,6 +78,7 @@ select {
 }
 
 .header-in {
+	display: flex;
 	justify-content: space-between;
 }
 
@@ -83,7 +88,23 @@ select {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	width: 98%;
+}
+.header-block .logo {
+	display: flex;
+	align-items: center;
+}
+.header-block .logo img {
+	height: 40px;
+}
+.header-block .logo span {
+	display: inline-block;
+	font-size: 20px;
+	color: #353535;
+	margin-left: 10px;
+	font-weight: 500;
+}
+.header-nav{
+	width: 100%;
 }
 
 .header-nav,
@@ -247,7 +268,6 @@ select {
 	display: flex;
 	align-items: center;
 	margin-left: 20px;
-	width: 302px;
 }
 
 header .login-btn {
@@ -296,7 +316,102 @@ header .favorites-and-cart a {
 	justify-content: center;
 }
 
+/* Header top media */
+.header__top-menu{
+	display: none;
+	align-items: center;
+	justify-content: space-between;
+}
+.header-bottom .bars-media img,
+.bars-media-top img{
+	width: 32px;
+	margin-left: 16px;
+}
+.bars-media{
+	display: none;
+}
+.header-top .logo-media-img{
+	display: none;
+}
+.header-actions-link,
+.bars-media-top{
+	display: none;
+}
 
+.header__fixed-menu{
+	position: fixed;
+	left: 0;bottom: -57px;
+	width: 100%;
+	z-index: 23;
+	display: none;
+}
+.header__fixed-menu .header__fixes-links{
+	background-color: rgba(28,28,28,.7);
+	backdrop-filter: blur(125px);
+	-webkit-clip-path: polygon(0 56px,0 20px,0.1px 17.9px,0.4px 16px,0.6px 15px,0.9px 14px,1.3px 12.8px,2px 11.3px,2.5px 10.3px,3.1px 9.3px,3.6px 8.6px,4.3px 7.6px,5.2px 6.6px,5.8px 6px,6.7px 5px,7.8px 4.1px,8.7px 3.5px,9.4px 3px,10.3px 2.5px,11.1px 2.1px,12px 1.7px,13.2px 1.2px,14.2px 0.8px,15.5px 0.5px,17.1px 0.2px,18.1px 0.1px,18.9px 0,21.7px 0,calc(50% - 43.8px) 0,calc(50% - 42.1px) 0,calc(50% - 41.3px) 0.1px,calc(50% - 40.2px) 0.4px,calc(50% - 39.3px) 0.8px,calc(50% - 38.7px) 1.1px,calc(50% - 38px) 1.6px,calc(50% - 37.3px) 2.1px,calc(50% - 36.7px) 2.7px,calc(50% - 36.2px) 3.3px,calc(50% - 35.7px) 4.1px,calc(50% - 35.4px) 4.7px,calc(50% - 35.1px) 5.3px,calc(50% - 34.9px) 6px,calc(50% - 34.7px) 6.6px,calc(50% - 34.5px) 8.3px,calc(50% - 32.4px) 15.8px,calc(50% - 30.5px) 19.5px,calc(50% - 28.7px) 22.3px,calc(50% - 26.8px) 24.6px,calc(50% - 25px) 26.5px,calc(50% - 23.1px) 28.2px,calc(50% - 21.3px) 29.6px,calc(50% - 19.4px) 30.9px,calc(50% - 17.6px) 32px,calc(50% - 13.9px) 33.7px,calc(50% - 12px) 34.4px,calc(50% - 10.2px) 34.9px,calc(50% - 6.5px) 35.7px,calc(50% - 4.6px) 35.9px,calc(50% - 2.8px) 36px,calc(50% - 0.9px) 36px,50% 36px,calc(50% + 0.9px) 36px,calc(50% + 2.8px) 36px,calc(50% + 4.6px) 35.9px,calc(50% + 6.5px) 35.7px,calc(50% + 8.3px) 35.3px,calc(50% + 10.2px) 34.9px,calc(50% + 13.9px) 33.7px,calc(50% + 15.7px) 32.9px,calc(50% + 17.6px) 31.9px,calc(50% + 19.4px) 30.9px,calc(50% + 21.3px) 29.6px,calc(50% + 23.1px) 28.2px,calc(50% + 25px) 26.5px,calc(50% + 26.8px) 24.5px,calc(50% + 28.7px) 22.2px,calc(50% + 30.5px) 19.4px,calc(50% + 32.4px) 15.8px,calc(50% + 34.5px) 8.4px,calc(50% + 34.5px) 8px,calc(50% + 34.5px) 7.7px,calc(50% + 34.6px) 7.2px,calc(50% + 34.7px) 6.7px,calc(50% + 34.8px) 6.1px,calc(50% + 34.9px) 5.7px,calc(50% + 35.1px) 5.2px,calc(50% + 35.3px) 4.8px,calc(50% + 35.6px) 4.1px,calc(50% + 36px) 3.6px,calc(50% + 36.4px) 3px,calc(50% + 36.7px) 2.6px,calc(50% + 37.2px) 2.2px,calc(50% + 37.7px) 1.8px,calc(50% + 38.1px) 1.5px,calc(50% + 38.7px) 1.1px,calc(50% + 39.3px) 0.8px,calc(50% + 39.9px) 0.5px,calc(50% + 40.6px) 0.3px,calc(50% + 41.3px) 0.1px,calc(50% + 42px) 0,calc(50% + 42.8px) 0,calc(100% - 20px) 0,calc(100% - 18.5px) 0.1px,calc(100% - 17.7px) 0.1px,calc(100% - 17.2px) 0.2px,calc(100% - 16.3px) 0.3px,calc(100% - 15.1px) 0.6px,calc(100% - 13.9px) 0.9px,calc(100% - 13.1px) 1.2px,calc(100% - 12.4px) 1.5px,calc(100% - 11.5px) 1.9px,calc(100% - 10.5px) 2.4px,calc(100% - 9.7px) 2.8px,calc(100% - 9.1px) 3.2px,calc(100% - 8.4px) 3.7px,calc(100% - 7.4px) 4.4px,calc(100% - 6.8px) 5px,calc(100% - 6.2px) 5.5px,calc(100% - 5.7px) 6px,calc(100% - 5px) 6.7px,calc(100% - 4.5px) 7.4px,calc(100% - 4px) 8px,calc(100% - 3.3px) 8.9px,calc(100% - 2.7px) 10px,calc(100% - 2.3px) 10.7px,calc(100% - 2px) 11.3px,calc(100% - 1.7px) 11.9px,calc(100% - 1.5px) 12.5px,calc(100% - 1.2px) 13.1px,calc(100% - 1px) 13.8px,calc(100% - 0.8px) 14.5px,calc(100% - 0.6px) 15.3px,calc(100% - 0.4px) 16.2px,calc(100% - 0.2px) 17px,calc(100% - 0.1px) 17.6px,calc(100% - 0.1px) 18.3px,100% 19.2px,100% 19.8px,100% 100%,0 100%);
+	padding: 5px 10px;
+	box-sizing: border-box;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	padding: 0px 20px;
+}
+
+.header__fixed-menu .header__fixes-link{
+	display: flex;
+	flex-direction: column;
+	gap: 6px;
+	align-items: center;
+	line-height: 1;
+    font-size: 10px;
+    color: hsla(0,0%,100%,.6);
+	padding: 10px 0;
+}
+.header__fixed-menu .header__fixes-link i{
+	font-size: 14px;
+	color: #fff;
+}
+.header__fixed-menu .header__fixes-link img{
+	width: 20px;
+}
+.header__fixed-menu .header__fixed-search img {
+	width: 24px;
+}
+.header__fixed-menu .header__fixed-search{
+	position: relative;
+    top: -80px;
+    transform: translate(-50%);
+    left: 50%;
+	display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 56px;
+    height: 56px;
+    box-shadow: 0 4px 25px rgba(36,95,52,.2);
+	color: #fff;
+    background-color: #42ab44;
+    border: 2px solid #42ab44;
+	border-radius: 50px;
+}
+.header__fixed-menu .header__fixed-search:hover{
+	background-color: #248341;
+    border-color: #248341;
+}
+
+.header__fixed-menu .header__fixed-search.active{
+	background: #fff;
+	border-color: #fff;
+}
+.header__fixed-menu .header__fixed-search .header__fixed-img1{
+	display: none;
+}
+.header__fixed-menu .header__fixed-search.active .header__fixed-img1{
+	display: block;
+}
+.header__fixed-menu .header__fixed-search.active .header__fixed-img2{
+	display: none;
+}
+/* Category */
 
 .category {
 	width: 100%;
@@ -354,20 +469,15 @@ header .favorites-and-cart a {
 
 .category .category__main .category-main-img {
 	position: absolute;
-	right: 0;
-	top: 20px;
-	z-index: 0;
+    right: 0;
+    top: 41px;
+    z-index: -1;
 }
 
 .main-sec {
 	background: #fff;
 	margin-bottom: 40px;
 }
-
-/* .main__sec-content {
-	display: flex;
-} */
-
 .adaptive-categories-filter {
 	display: none;
 	overflow: auto;
@@ -1543,7 +1653,10 @@ header .favorites-and-cart a {
 
 
 /* Modal */
-.modal__sign .modal-close {
+.modal__sign .modal-close,
+.header__menu-media-wrap .modal-close,
+.filter__modal-top .modal-close,
+.sorting__modal .sorting-btn {
 	border: 1px solid gray;
 	border-radius: 50px;
 	font-size: 15px;
@@ -1556,11 +1669,17 @@ header .favorites-and-cart a {
 	justify-content: center;
 }
 
-.modal__sign .modal-close:hover {
+.modal__sign .modal-close:hover,
+.header__menu-media-wrap .modal-close:hover,
+.filter__modal-top .modal-close:hover,
+.sorting__modal .sorting-btn:hover {
 	border: 1px solid black;
 }
 
-.modal__sign .modal-close:focus {
+.modal__sign .modal-close:focus,
+.header__menu-media-wrap .modal-close:focus,
+.filter__modal-top .modal-close:focus,
+.sorting__modal .sorting-btn:focus {
 	box-shadow: none;
 }
 
@@ -1700,7 +1819,7 @@ header .favorites-and-cart a {
 	position: absolute;
 	top: 10px;
 	z-index: 20;
-	right: -80px;
+	right: -51px;
 	transition: .5s ease-in;
 	display: none;
 }
@@ -2285,8 +2404,337 @@ header .favorites-and-cart a {
 
 
 
+/* Header menu media */
+.header__menu-media-bg{
+	position: absolute;
+	top: 0;
+	right: 0;
+	opacity: 0;
+	z-index: 26;
+	pointer-events: none;
+	background-color: rgba(28,28,28,.4);
+	width: 100%;
+	height: 100vh;
+	transition: .5s ease-in-out;
+}
+.header__menu-media-wrap{
+	position: fixed;
+    top: 0;
+    left: -110%;
+	z-index: 27;
+    max-width: 100%;
+    width: 350px;
+    height: 100vh;
+    background-color: #fff;
+    overflow-x: hidden;
+    overflow-y: auto;
+	transition: .5s ease-in-out;
+}
+.header__menu-media-wrap.active{
+	left: 0;
+}
+.header__menu-media-wrap.active + .header__menu-media-bg{
+	opacity: 1;
+	pointer-events: auto;
+}
+.header__menu-media-wrap .modal-close {
+    padding: 8px;
+    min-width: 30px;
+    height: 32px;
+}
+.header__menu-media-wrap .header__menu-media-top{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 16px;
+}
+.header__menu-media-wrap .header__manu-media-wrap{
+	padding: 24px 16px;
+    display: flex;
+    flex-direction: column;
+    background-color: #f5f7f9;
+	gap: 24px;
+}
+.header__menu-media-wrap .header__menu-media-item{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.header__menu-media-wrap .header__menu-media-item .header-link{
+	line-height: 20px;
+    font-size: 14px;
+    color: #1c1c1c;
+	font-weight: 500;
+}
+.header__menu-media-wrap .header__menu-media-bottom{
+	display: flex;
+	flex-direction: column;
+	padding: 24px 16px;
+	gap: 12px;
+}
+.header__menu-media-wrap .header__menu-media-bottom a{
+    line-height: 20px;
+    font-size: 14px;
+    color: #7d7e7f;
+    text-decoration: none;
+}
 
+
+/* Filter modal */
+.filter__modal, .sorting__modal,
+.search__modal{
+	display: none;
+}
+.filter__modal .filter__modal-wrap,
+.sorting__modal .sorting__modal-wrap,
+.search__modal .search__modal-wrap{
+	position: fixed;
+	z-index: 24;
+	bottom: -110%;
+	border-radius: 12px 12px 0 0;
+	background-color: #fff;
+	width: 100%;
+	padding: 40px 40px;
+    overflow: unset;
+	transition: .5s ease-in-out;
+}
+.filter__modal-top .modal-close{
+	height: 48px;
+}
+.filter__modal .filter__modal-wrap.active,
+.sorting__modal .sorting__modal-wrap.active,
+.search__modal .search__modal-wrap.active{
+	bottom: 0;
+}
+.filter__modal .filter__modal-wrap.active + .header__menu-media-bg,
+.sorting__modal .sorting__modal-wrap.active + .header__menu-media-bg,
+.search__modal .search__modal-wrap.active + .header__menu-media-bg{
+	opacity: 1;
+	z-index: 20;
+	pointer-events: auto;
+}
+
+.filter__modal-title{
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 24px;
+    display: flex;
+    align-items: center;
+    color: #1c1c1c;
+}
+.filter__modal-line{
+    display: block;
+    width: 50px;
+    height: 4px;
+    border-radius: 4px;
+    background-color: #e2e4e5;
+    position: absolute;
+    top: 8px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.filter__modal .filter__modal-top{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.filter__modal .thematic-filters{
+	padding: 0;
+	background: transparent;
+	margin-top: 28px;
+	box-shadow: none;
+}
+.filter__modal .filter__modal-data{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	overflow-x: scroll;
+	gap: 8px;
+}
+.filter__modal .filter__modal-data::-webkit-scrollbar{
+	height: 0;
+}
+.filter__modal .filter__modal-data .filter__modal-data-link{
+	white-space: nowrap;
+    width: -moz-fit-content;
+    width: fit-content;
+    padding: 8px 16px;
+    border-radius: 4px;
+    background-color: #e2e4e5;
+    color: #1c1c1c;
+    white-space: nowrap;
+    cursor: pointer;
+    transition: .3s ease-in;
+}
+.filter__modal .filter__modal-data .filter__modal-data-link.active{
+	background-color: #42ab44;
+    color: #fff;
+}
+.filter__modal .filter__modal-btns{
+	display: flex;
+	align-items: center;
+	gap: 24px;
+	margin-top: 40px;
+}
+.filter__modal .filter__modal-btn{
+	background-color: #e2e4e5;
+    color: #7d7e7f;
+	border: 1px solid #e2e4e5;
+	padding: 12px 36px;
+	width: 100%;
+	font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	border-radius: 25px;
+	cursor: no-drop;
+}
+.filter__modal .filter__modal-btn2{
+	background-color: #fff;
+}
+.filter__modal .filter__modal-btn2.active{
+	cursor: pointer;
+}
+.filter__modal .filter__modal-btn1.active{
+	color: #fff;
+    background-color: #42ab44;
+    border: 2px solid #42ab44;
+	cursor: pointer;
+}
+
+/* Sorting Modal */
+.sorting__modal .sorting__modal-top{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.sorting__modal .sorting__modal-spn{
+	color: #7d7e7f;
+	font-weight: 500;
+    font-size: 14px;
+    line-height: 20px;
+}
+.sorting__modal .sorting__modal-items{
+	display: flex;
+	flex-direction: column;
+	margin-top: 24px;
+}
+.sorting__modal .sorting__modal-items a{
+    padding: 10px 0;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    border-bottom: 1px solid #e2e4e5;
+}
+
+
+/* Search modal */
+.search__modal .search__modal-wrap{
+	height: 92%;
+	z-index: 20;
+}
+.search__modal .search__modal-top{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-bottom: 24px;
+}
+
+
+
+/* Media */
 @media only screen and (max-width:1199px) {
+	.header-top .header__top-menu .logo {
+		display: flex;
+		align-items: center;
+	}
+	.header-top .header__top-menu .logo img {
+		height: 40px;
+	}
+	.header-top .header__top-menu .logo span {
+		font-size: 20px;
+		font-weight: 500;
+		color: #000;
+		margin-left: 10px;
+	}
+	.header-in{
+		display: none;
+	}
+	.header__top-menu,
+	.bars-media{
+		display: flex;
+	}
+	.header-top{
+		background: #fff;
+		border: 0;
+		padding: 20px 0 0;
+	}
+	.header-bottom .header-bottom-actions{
+		display: none;
+	}
+	.header-bottom .logo{
+		display: none;
+	}
+	.header-bottom .header-block{
+		width: 100%;
+	}
+	.search-content{
+		max-width: 100%;
+		width: 100%;
+	}
+
+	.catalog-btn{
+		margin: 0 16px 0 0;
+	}
+
+	.category-products {
+		width: calc(100% - 260px);
+	}
+
+	.category-card {
+		width: calc(25vw - 106.5px);
+	}
+
+	.main-aside {
+		width: 260px;
+	}
+
+	.footer-top {
+		align-items: flex-start;
+		flex-wrap: wrap;
+	}
+
+	.footer-logo {
+		margin-right: 88px;
+	}
+
+	.footer-logo img {
+		width: 178px;
+		height: 32px;
+	}
+
+	.footer-copyright {
+		margin-right: 0;
+		margin-bottom: 16px;
+		width: calc(100% - 266px);
+	}
+
+	.footer-socials {
+		margin-top: 4px;
+		margin-right: 58px;
+		width: 208px;
+	}
+
+	.footer-contacts {
+		width: calc(100% - 266px);
+	}
+
+	.footer-link {
+		max-width: 192px;
+	}
+
 	.aside-catalog-selected-category {
         padding: 40px 0 36px;
         flex-wrap: wrap;
@@ -2367,62 +2815,7 @@ header .favorites-and-cart a {
     .aside-catalog-sub-category__list {
         display: none
     }
-}
-
-
-/* Media */
-
-@media(max-width:1199px) {
-
-	.main {
-		margin-top: 164px;
-	}
-
-	.category-products {
-		width: calc(100% - 260px);
-	}
-
-	.category-card {
-		width: calc(25vw - 106.5px);
-	}
-
-	.main-aside {
-		width: 260px;
-	}
-
-	.footer-top {
-		align-items: flex-start;
-		flex-wrap: wrap;
-	}
-
-	.footer-logo {
-		margin-right: 88px;
-	}
-
-	.footer-logo img {
-		width: 178px;
-		height: 32px;
-	}
-
-	.footer-copyright {
-		margin-right: 0;
-		margin-bottom: 16px;
-		width: calc(100% - 266px);
-	}
-
-	.footer-socials {
-		margin-top: 4px;
-		margin-right: 58px;
-		width: 208px;
-	}
-
-	.footer-contacts {
-		width: calc(100% - 266px);
-	}
-
-	.footer-link {
-		max-width: 192px;
-	}
+	
 }
 
 @media(max-width:991px) {
@@ -2434,7 +2827,9 @@ header .favorites-and-cart a {
 		display: -webkit-box;
 	}
 
-	.filters-btn {
+	.filters-btn,
+	.filter__modal, .sorting__modal,
+	.search__modal{
 		display: block;
 	}
 
@@ -2449,9 +2844,26 @@ header .favorites-and-cart a {
 }
 
 @media(max-width:767px) {
+	.header-top .header__top-menu .logo span {
+		display: none;
+	}
+	.header-top .logo-media-img,
+	.header-actions-link-media,
+	.bars-media-top{
+		display: flex;
+	}
+	.header__fixed-menu{
+		display: block;
+	}
+	
+	.header__top-menu .header-bottom-actions,
+	.header-bottom{
+		display: none;
+	}
+
 
 	.main {
-		margin-top: 76px;
+		margin-top: 16px;
 	}
 
 	.adaptive-link {
@@ -2592,6 +3004,10 @@ header .favorites-and-cart a {
 }
 
 @media(max-width:575px) {
+	.header__fixed-menu .header__fixes-links{
+		justify-content: space-between;
+	}
+
 	.adaptive-categories-filter {
 		padding-left: 0;
 	}
@@ -2614,4 +3030,21 @@ header .favorites-and-cart a {
 		font-size: 20px;
 	}
 
+	.tabs-sec .farm__tab-img {
+		width: 90px;
+	}
+
+	.product__slide-content {
+		position: relative;
+		padding: 0 0;
+	}
+
+	.filter__modal .filter__modal-wrap,
+	.sorting__modal .sorting__modal-wrap,
+	.search__modal .search__modal-wrap {
+		padding: 40px 15px;
+	}
+	.filter__modal .filter__modal-btns {
+		flex-wrap: wrap;
+	}
 }
